<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.ramya.myvehicleapp.ui.activities.AddvehicleActivity">
    <EditText
        android:id="@+id/activity_addvehicle_et_vehicleID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_id" />

    <EditText
        android:id="@+id/activity_addvehicle_et_vehicleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_name" />

    <EditText
        android:id="@+id/activity_addvehicle_et_vehicleType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_type" />

    <EditText
        android:id="@+id/activity_addvehicle_et_manufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/manufacturer" />

    <EditText
        android:id="@+id/activity_addvehicle_et_vehicleColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/color" />

    <Button
        android:id="@+id/activity_addvehicle_btn_addVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_vehicle"/>

    <Button
        android:id="@+id/activity_addvehicle_btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DONE"/>
</LinearLayout>
