<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="30dp"
    tools:context="com.example.ramya.myvehicleapp.ui.activities.LoginActivity">

    <TextView
        android:id="@+id/activity_login_tv_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/activity_login_ll_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/activity_login_ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/custom_border"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/activity_login_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="5dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:drawableLeft="@drawable/unlocked"
                android:drawablePadding="5dp"
                android:imeOptions="actionDone"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/light_grey" />

            <ImageView
                android:id="@+id/activity_login_iv_password_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/eye" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/activity_login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_login_ll_login"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="15dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/login_button_size" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_login_btn_login"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="@dimen/signup" />



</RelativeLayout>
